// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unified-latex-util-argspec parses xparse argument specification string "!o r() m" 1`] = `
Array [
  Object {
    "closeBrace": "]",
    "noLeadingWhitespace": true,
    "openBrace": "[",
    "type": "optional",
  },
  Object {
    "closeBrace": ")",
    "openBrace": "(",
    "type": "mandatory",
  },
  Object {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "" 1`] = `Array []`;

exports[`unified-latex-util-argspec parses xparse argument specification string "O{nested{defaults}}" 1`] = `
Array [
  Object {
    "closeBrace": "]",
    "defaultArg": Object {
      "content": Array [
        "n",
        "e",
        "s",
        "t",
        "e",
        "d",
        Object {
          "content": Array [
            "d",
            "e",
            "f",
            "a",
            "u",
            "l",
            "t",
            "s",
          ],
          "type": "group",
        },
      ],
      "type": "group",
    },
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "O{somedefault} m o" 1`] = `
Array [
  Object {
    "closeBrace": "]",
    "defaultArg": Object {
      "content": Array [
        "s",
        "o",
        "m",
        "e",
        "d",
        "e",
        "f",
        "a",
        "u",
        "l",
        "t",
      ],
      "type": "group",
    },
    "openBrace": "[",
    "type": "optional",
  },
  Object {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  Object {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "d++ D--{def}" 1`] = `
Array [
  Object {
    "closeBrace": "+",
    "openBrace": "+",
    "type": "optional",
  },
  Object {
    "closeBrace": "-",
    "defaultArg": Object {
      "content": Array [
        "d",
        "e",
        "f",
      ],
      "type": "group",
    },
    "openBrace": "-",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "m e{^}" 1`] = `
Array [
  Object {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  Object {
    "embellishmentTokens": Array [
      "^",
    ],
    "type": "embellishment",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "m e{_^}" 1`] = `
Array [
  Object {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  Object {
    "embellishmentTokens": Array [
      "_",
      "^",
    ],
    "type": "embellishment",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "m ta o o" 1`] = `
Array [
  Object {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  Object {
    "token": "a",
    "type": "optionalToken",
  },
  Object {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  Object {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "o m o !o m" 1`] = `
Array [
  Object {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  Object {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
  Object {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  Object {
    "closeBrace": "]",
    "noLeadingWhitespace": true,
    "openBrace": "[",
    "type": "optional",
  },
  Object {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "o m" 1`] = `
Array [
  Object {
    "closeBrace": "]",
    "openBrace": "[",
    "type": "optional",
  },
  Object {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "s m" 1`] = `
Array [
  Object {
    "type": "optionalStar",
  },
  Object {
    "closeBrace": "}",
    "openBrace": "{",
    "type": "mandatory",
  },
]
`;

exports[`unified-latex-util-argspec parses xparse argument specification string "v!" 1`] = `
Array [
  Object {
    "closeBrace": "!",
    "openBrace": "!",
    "type": "verbatim",
  },
]
`;
